# git-twig

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  twig.desktop  vite.config.ts
.github/workflows/: release.yml
.reuse/: dep5
aur/twig-bin/: PKGBUILD  update.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  github.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: branches.rs  diff.rs  git_config.rs  github.rs  graph.rs  mod.rs  repo.rs  session.rs  settings.rs  staging.rs  stash.rs  window.rs
src-tauri/src/git/: mod.rs  reader.rs  writer.rs
src/components/branches/: BranchList.svelte
src/components/diff/: AudioPreview.svelte  DiffHunk.svelte  DiffViewer.svelte  ImageDiff.svelte
src/components/github/: CloneFromGitHub.svelte  CreatePullRequest.svelte  CreateRepoOnGitHub.svelte
src/components/graph/: CommitGraph.svelte  CommitRow.svelte  GraphCanvas.svelte
src/components/layout/: AppShell.svelte  HomeScreen.svelte  Sidebar.svelte  TabBar.svelte  TitleBar.svelte
src/components/settings/: AppearanceSettings.svelte  EditorDiffSettings.svelte  GeneralSettings.svelte  GitConfigSettings.svelte  GitHubSettings.svelte  KeybindingsSettings.svelte  SettingsScreen.svelte
src/components/shared/: Modal.svelte
src/components/staging/: StagingArea.svelte  StashPanel.svelte
src/components/updater/: UpdateChecker.svelte
src/lib/: keybindings.ts  tauri.ts
src/lib/stores/: autofetch.ts  graph.ts  repos.ts  settings.ts  ui.ts
src/lib/types/: git.ts  github.ts
