[package]
name = "twig"
version = "0.1.0"
description = "Twig — A lightweight Git GUI. Lighter than the rest."
authors = ["Igor Kalicinski"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "twig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
git2 = "0.20"
log = "0.4"
md5 = "0.7"
